; ModuleID = '/home/carl/AnghaBench/linux/block/extr_genhd.c_sector_in_part.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_genhd.c_sector_in_part.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hd_struct = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hd_struct*, i64)* @sector_in_part to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sector_in_part(%struct.hd_struct* %0, i64 %1) #0 {
  %3 = alloca %struct.hd_struct*, align 8
  %4 = alloca i64, align 8
  store %struct.hd_struct* %0, %struct.hd_struct** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.hd_struct*, %struct.hd_struct** %3, align 8
  %6 = getelementptr inbounds %struct.hd_struct, %struct.hd_struct* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp sle i64 %7, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = load %struct.hd_struct*, %struct.hd_struct** %3, align 8
  %13 = getelementptr inbounds %struct.hd_struct, %struct.hd_struct* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.hd_struct*, %struct.hd_struct** %3, align 8
  %16 = call i64 @part_nr_sects_read(%struct.hd_struct* %15)
  %17 = add nsw i64 %14, %16
  %18 = icmp slt i64 %11, %17
  br label %19

19:                                               ; preds = %10, %2
  %20 = phi i1 [ false, %2 ], [ %18, %10 ]
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local i64 @part_nr_sects_read(%struct.hd_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
